payment added to flights

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
-    "node-mailjet": "^6.0.5",
     "nodemailer": "^6.9.14",
-    "puppeteer": "^23.0.1",
+    "puppeteer": "^23.1.0",
+    "stripe": "^16.8.0",
     "twilio": "^5.2.2"
   },
   "devDependencies": {
